[package]
name = "dotted_me"
version = "0.1.0"
authors = ["Santiago Cézar <santiagocezar2013@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libdotted = {path = "libdotted/"}
clap = {version = "3.0.0-beta.1", optional = true}

[workspace]

members = [
    "libdotted"
]
