[package]
name = "libdotted"
version = "0.1.0"
authors = ["Santiago Cézar <santiagocezar2013@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = {version = "0.23.4", default-features = false, features = ["gif", "jpeg", "png", "tiff", "webp", "bmp"]}

[lib]
name = "libdotted"
path = "src/lib.rs"
