[package]
name = "libdotted"
version = "0.1.0"
authors = ["Santiago Cézar <santiagocezar2013@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = {version = "0.23.4", default-features = false, features = ["gif", "jpeg", "png", "tiff", "webp", "bmp"]}
js-sys = "0.3.39"

[dependencies.wasm-bindgen]
version = "0.2.62"
features = ["serde-serialize"]

[lib]
name = "libdotted"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

